working ansible asdf for rhel family

--- a/hosts.yaml
+++ b/hosts.yaml
@@ -21,6 +21,9 @@ all:
     rhel8:
       ansible_ssh_private_key_file: "./.vagrant/machines/rhel8/virtualbox/private_key"
       ansible_port: 50215
+    almalinux8:
+      ansible_ssh_private_key_file: "./.vagrant/machines/almalinux8/virtualbox/private_key"
+      ansible_port: 50216
 
 
 
